--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clove_hub</title>
+</head>
+<body>
+
+    <h1>Hello!</h1>
+<P>This article is about the spice. For other uses, see Clove <span>(disambiguation).</span>
+    <em>"Cloves"</em>  redirects here. For other uses, see <i><strong> <b>CLOVES</b></strong></i>syndrome and Cloves<span>(singer).</span>
+    Not to be confused with Clover.</P>
+
+</body>
+</html>
+
