--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clove_hub</title>
 </head>
+<style>
+    p{
+        font: 100%/1.5 sans-serif;
+        max-width: 33em;
+    }
+    h1{
+        color: brown;
+    }
+
+</style>
 <body>
 
     <h1>Hello!</h1>
