--- a/index.html
+++ b/index.html
@@ -17,11 +17,26 @@
 </style>
 <body>
 
-    <h1>Hello!</h1>
-<P>This article is about the spice. For other uses, see Clove <span>(disambiguation).</span>
-    <em>"Cloves"</em>  redirects here. For other uses, see <i><strong> <b>CLOVES</b></strong></i>syndrome and Cloves<span>(singer).</span>
-    Not to be confused with Clover.</P>
+    <h1>Clove</h1>
 
+<P> <em><strong>This article is about the spice.</strong> 
+    For other uses, see Clove 
+    <span>(disambiguation).</span>
+    <em>"Cloves"</em> 
+    redirects here. For other uses, 
+    <a href="#">see CLOVES syndrome</a>  and Cloves (singer).
+    Not to be confused with Clover.</em>
+ </P> 
+
+    <p> <b>Cloves</b>
+         are the aromatic flower buds of a tree in the family Myrtaceae, 
+         <strong>Syzygium aromaticum </strong>
+         <span>(/sɪˈzɪdʒiːəm ˌærəˈmætɪkəm/).</span>
+        They are native to the Maluku Islands, or Moluccas, in 
+        <i>Indonesia</i>, and are commonly used as a spice, flavoring, or fragrance in consumer products, such as toothpaste, soaps, or cosmetics.
+        Cloves are available throughout the year owing to different harvest seasons across various countries. 
+    </p>
+    
 </body>
 </html>
 
