--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
          <strong>Syzygium aromaticum </strong>
          <span>(/sɪˈzɪdʒiːəm ˌærəˈmætɪkəm/).</span>
         They are native to the Maluku Islands, or Moluccas, in 
-        <i>Indonesia</i>, and are commonly used as a spice, flavoring, or fragrance in consumer products, such as toothpaste, soaps, or cosmetics.
-        Cloves are available throughout the year owing to different harvest seasons across various countries. 
+        <i>Indonesia</i>, and are commonly used as a spice, flavoring, or fragrance in consumer products 
+        ,such as toothpaste, soaps, or cosmetics.
+        Cloves are available
+        <abbr title=""> 
+           <i>throughout the year owing to different harvest seasons across various countries.
+        </abbr></i>  
     </p>
     
 </body>
