--- a/Uses.html
+++ b/Uses.html
@@ -9,15 +9,19 @@
 </head>
 <body>
 
+<header>
     <nav>
-        <a href="http://127.0.0.1:5500/index.html" role="button">
-           <b>Home page</b>
-        </a>
-        <a href="http://127.0.0.1:5500/medicine%20use.html" role="button">
-           <b>Medecinal uses</b> 
-        </a>
-        
+        <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/index.html" role="button">
+                                 <b>Home page</b>
+        </a>|
+        <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/medicine%20use.html" role="button">
+                                 <b>Medecinal uses</b> 
+        </a>|
     </nav>
+</header>
+
+<div>
+
     
     <h2>
         Uses of Clove
@@ -36,5 +40,8 @@
         A major component of clove's taste is imparted by the chemical eugenol,and the quantity of the spice required is typically small.
         It pairs well with cinnamon, allspice, vanilla, red wine, basil, onion, citrus peel, star anise, and peppercorns. 
     </p>
+
+</div>
+
 </body>
 </html>
