--- a/index.html
+++ b/index.html
@@ -17,24 +17,30 @@
 </style>
 <body>
 
-    <nav>
-        <a href="http://127.0.0.1:5500/medicine%20use.html" title="Medicinal" role="button">
-           <b>Medecinal Uses</b> 
-        </a>
-        <a href="http://127.0.0.1:5500/Uses.html" title="Uses" role="button">
-           <b>Uses</b> 
-        </a>
-    </nav>
-    <h1>Clove</h1>
 
-<P> <em><strong>This article is about the spice.</strong> 
+<header>
+    <nav>
+        <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/medicine%20use.html" title="Medicinal" role="button" >
+           <b>Medecinal Uses</b> 
+        </a>|
+        <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/Uses.html" title="Uses" role="button">
+           <b>Uses</b> 
+        </a>|
+    </nav>
+</header>
+
+<div>
+        <h1>Clove</h1>
+
+    <P> <em><strong>This article is about the spice.</strong> 
     For other uses, see Clove 
     <span>(disambiguation).</span>
     <em>"Cloves"</em> 
     redirects here. For other uses, 
-    <a href="#">see CLOVES syndrome</a>  and Cloves (singer).
-    Not to be confused with Clover.</em>
- </P> 
+    <a href="https://en.wikipedia.org/wiki/CLOVES_syndrome">see CLOVES syndrome</a>  and Cloves (singer).
+    Not to be confused with 
+    <a href="https://en.wikipedia.org/wiki/Clover">Clover</a>.</em>
+    </P> 
 
     <p> <b>Cloves</b>
          are the aromatic flower buds of a tree in the family Myrtaceae, 
@@ -54,12 +60,14 @@
            <h3>Etymology</h3> 
         </b>
      
-The word clove, 
-<abbr title="">first used in English in the 15th century,</abbr>
- derives via Middle English clow of gilofer, Anglo-French clowes de gilofre and Old French clou de girofle, from the Latin word clavus <strong>"nail"</strong> .
- The related English word gillyflower, originally meaning "clove", derives via said Old French girofle and Latin caryophyllon, from the Greek karyophyllon "clove", literally "nut leaf".
+        The word clove, 
+        <abbr title="">first used in English in the 15th century,</abbr>
+        derives via Middle English clow of gilofer, Anglo-French clowes de gilofre and Old French clou de girofle, from the Latin word clavus <strong>"nail"</strong> .
+        The related English word gillyflower, originally meaning "clove", derives via said Old French girofle and Latin caryophyllon, from the Greek karyophyllon "clove", literally "nut leaf".
     </p>
 
+
+</div>
 
 
 </body>
