--- a/medicine use.html
+++ b/medicine use.html
@@ -8,36 +8,42 @@
     </title>
 </head>
 <body>
-    
-<nav>
-    <a href="http://127.0.0.1:5500/index.html" role="button">
-       <b>Home page</b>
-    </a>
-    <a href="http://127.0.0.1:5500/Uses.html" role="button">
-        <b>Uses</b>
-    </a>
-</nav>
 
-<h2>
+<header>   
+     <nav>
+        <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/index.html" role="button">
+                            <b>Home page</b>
+         </a>|
+        <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/Uses.html" role="button">
+                             <b>Uses</b>
+        </a>|
+    </nav>
+</header>
+
+<div>
+    <h2>
     Medecinal uses of Clove
-</h2>
-    <p>
+    </h2>
+
+        <p>
         The use of clove for any medicinal purpose has not been approved by the US Food and Drug Administration,
          and its use may cause adverse effects if taken orally by people with liver disease, blood clotting and immune system disorders, 
          or food allergies.
-    </p>
+        </p>
 
-    <p>
+        <p>
         Cloves are used in traditional medicine as an essential oil, which is used as an anodyne (analgesic) mainly for dental emergencies and other disorders.
         There is evidence that clove oil containing eugenol is effective for toothache pain and other types of pain, and one review reported the efficacy of eugenol combined with zinc oxide as an analgesic for alveolar osteitis. 
         Clove essential oil may prevent the growth of Enterococcus faecalis bacteria which is often present in a root canal treatment failure.
-    </p>
+        </p>
 
-    <p>
+        <p>
         Studies to determine its effectiveness for fever reduction, as a mosquito repellent, and to prevent premature ejaculation have been inconclusive.
         It remains unproven whether blood sugar levels are reduced by cloves or clove oil.
-        The essential oil may be used in aromatherapy.[5]
-    </p>
+        The essential oil may be used in aromatherapy.
+        </p>
+
+</div>
 
 </body>
 </html>
