update the home page

--- a/index.html
+++ b/index.html
@@ -15,22 +15,37 @@
     }
 
 </style>
+
 <body>
 
+    <header>
+        <div>
+            <nav>
+                <ul>
+                    <li>
+                        Home
+                    </li>
+                  <li>
+                    <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/medicine%20use.html" >
+                    Medecinal Use 
+                    </a>
+                  </li>
+                  <li>
+                    <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/Uses.html">
+                    Other Use 
+                    </a>
+                  </li>
+                </ul>   
+            </nav>
+        </div>
+    </header>
 
-<header>
-    <nav>
-        <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/medicine%20use.html" title="Medicinal" role="button" >
-           <b>Medecinal Uses</b> 
-        </a>|
-        <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/Uses.html" title="Uses" role="button">
-           <b>Uses</b> 
-        </a>|
-    </nav>
-</header>
+    <h1>Clove</h1>
+    
+        <main>
 
-<div>
-        <h1>Clove</h1>
+            <div>
+
 
     <P> <em><strong>This article is about the spice.</strong> 
     For other uses, see Clove 
@@ -67,9 +82,12 @@
     </p>
 
 
-</div>
+            </div>
 
+        </main>
+    </div>
 
 </body>
+
 </html>
 
