--- a/medicine use.html
+++ b/medicine use.html
@@ -8,24 +8,31 @@
     </title>
 </head>
 <body>
+    <header>
+        <div class="content">
+            <nav>
+               <ul>
+                <li>
+                   <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/index.html">
+                                    Home
+                    </a>
+                </li>
+                <li>
+                   <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/Uses.html">
+                                     Othrt Use 
+                   </a>
+                </li>
+                </ul>
+            </nav>
+       </div>
+    </header>
 
-<header>   
-     <nav>
-        <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/index.html" role="button">
-                            <b>Home page</b>
-         </a>|
-        <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/Uses.html" role="button">
-                             <b>Uses</b>
-        </a>|
-    </nav>
-</header>
-
-<div>
     <h2>
-    Medecinal uses of Clove
+        Medecinal uses of Clove
     </h2>
 
-        <p>
+ <div>
+      <p>
         The use of clove for any medicinal purpose has not been approved by the US Food and Drug Administration,
          and its use may cause adverse effects if taken orally by people with liver disease, blood clotting and immune system disorders, 
          or food allergies.
@@ -43,7 +50,6 @@
         The essential oil may be used in aromatherapy.
         </p>
 
-</div>
-
+  </div>
 </body>
 </html>
