--- a/Uses.html
+++ b/Uses.html
@@ -8,24 +8,29 @@
     </title>
 </head>
 <body>
-
-<header>
-    <nav>
-        <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/index.html" role="button">
-                                 <b>Home page</b>
-        </a>|
-        <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/medicine%20use.html" role="button">
-                                 <b>Medecinal uses</b> 
-        </a>|
-    </nav>
-</header>
-
-<div>
-
-    
+    <header>
+        <div class="content">
+            <nav>
+                
+            <ul>
+                <li>
+                    <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/index.html">
+                                         Home
+                    </a>
+                </li>
+                <li>
+                    <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/medicine%20use.html">
+                                         Medecinal uses 
+                    </a>
+                </li>
+            </ul>
+            </nav>
+        </div>
+    </header>
     <h2>
         Uses of Clove
     </h2>
+<div>
 
     <p>
         Cloves are used in the cuisine of Asian, African, Mediterranean, and the Near and Middle East countries, lending flavor to meats (such as baked ham), curries, and marinades, as well as fruit (such as apples, pears, and rhubarb). 
@@ -41,6 +46,7 @@
         It pairs well with cinnamon, allspice, vanilla, red wine, basil, onion, citrus peel, star anise, and peppercorns. 
     </p>
 
+</div>
 </div>
 
 </body>
