update HTML code

--- a/Uses.html
+++ b/Uses.html
@@ -4,50 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Uses
+       Others Uses
     </title>
 </head>
-<body>
-    <header>
-        <div class="content">
-            <nav>
-                
-            <ul>
-                <li>
-                    <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/index.html">
+<body class="all_containt page ">
+    <div>
+        <header>
+            <div class="fixed-top">
+              <nav class="navbar navbar-expand-lg">
+                    <div class="container herder_sticky">
+                       <ul class="navbar-nav">
+                          <li class="nav-item">
+                                <a class="nav-link active" href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/index.html">
                                          Home
-                    </a>
-                </li>
-                <li>
-                    <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/medicine%20use.html">
+                                </a>
+                          </li>
+                          <li class="nav-item">
+                             <a class="nav-link active" href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/medicine%20use.html">
                                          Medecinal uses 
-                    </a>
-                </li>
-            </ul>
-            </nav>
+                             </a>
+                          </li>
+                       </ul>
+                   </div>
+              </nav>
+            </div>
+        </header> 
+    </div>
+
+        <div class="page-container">
+            <div class="page-container inner">
+                <div class="content-container">
+                    <main id="content">
+                        <header class="page_titlebar">
+                            <h1>
+                                <span>
+                                    Uses of Clove 
+                                </span>
+                            </h1>  
+                        </header>
+                        <div id="bodyContent">
+                            <div id="content-text">
+                                <p>
+                                    Cloves are used in the cuisine of Asian, African, Mediterranean, and the Near and Middle East countries, lending flavor to meats (such as baked ham), curries, and marinades, as well as fruit (such as apples, pears, and rhubarb). 
+                                    Cloves may be used to give aromatic and flavor qualities to hot beverages, often combined with other ingredients such as lemon and sugar.
+                                    They are a common element in spice blends (as part of the Malay rempah empat beradik –"four sibling spices"– besides cinnamon, cardamom and star anise for example), including pumpkin pie spice and speculaas spices. 
+                                </p>
+                                <p>
+                                    In Mexican cuisine, cloves are best known as clavos de olor, and often accompany cumin and cinnamon.
+                                    They are also used in Peruvian cuisine, in a wide variety of dishes such as carapulcra and arroz con leche. 
+                                </p>
+                                <p>
+                                    A major component of clove's taste is imparted by the chemical eugenol,and the quantity of the spice required is typically small.
+                                    It pairs well with cinnamon, allspice, vanilla, red wine, basil, onion, citrus peel, star anise, and peppercorns. 
+                                </p>
+
+
+                            </div>
+
+                        </div>
+                    </main>
+                </div>
+            </div>
         </div>
-    </header>
-    <h2>
-        Uses of Clove
-    </h2>
-<div>
-
-    <p>
-        Cloves are used in the cuisine of Asian, African, Mediterranean, and the Near and Middle East countries, lending flavor to meats (such as baked ham), curries, and marinades, as well as fruit (such as apples, pears, and rhubarb). 
-        Cloves may be used to give aromatic and flavor qualities to hot beverages, often combined with other ingredients such as lemon and sugar.
-        They are a common element in spice blends (as part of the Malay rempah empat beradik –"four sibling spices"– besides cinnamon, cardamom and star anise for example), including pumpkin pie spice and speculaas spices. 
-    </p>
-    <p>
-        In Mexican cuisine, cloves are best known as clavos de olor, and often accompany cumin and cinnamon.
-        They are also used in Peruvian cuisine, in a wide variety of dishes such as carapulcra and arroz con leche. 
-    </p>
-    <p>
-        A major component of clove's taste is imparted by the chemical eugenol,and the quantity of the spice required is typically small.
-        It pairs well with cinnamon, allspice, vanilla, red wine, basil, onion, citrus peel, star anise, and peppercorns. 
-    </p>
-
-</div>
-</div>
-
 </body>
 </html>
