--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="">
     <title>Clove_hub</title>
 </head>
 <style>
@@ -16,48 +17,59 @@
 
 </style>
 
-<body>
+<body class="all_containt page ">
+  <div>
 
-    <header>
-        <div>
-            <nav>
-                <ul>
-                    <li>
+    <header class="fixed-top">
+        <div class="topHeader-nav">
+            <nav class="navbar navbar-expand-lg" >
+            <div class="container header_sticky">
+                <div class="collaaps navbar-collaps" id="navbarSupportedContent">
+                     <ul class="navbar-nav">
+                    <li class="nav-item">
+                       <a class="nav-link active" href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/index.html">
                         Home
+                       </a> 
                     </li>
-                  <li>
-                    <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/medicine%20use.html" >
+                  <li class="nav-item">
+                    <a class="nav-link" href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/medicine%20use.html" >
                     Medecinal Use 
                     </a>
                   </li>
-                  <li>
-                    <a href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/Uses.html">
+                  <li class="nav-item">
+                    <a class="nav-link" href="file:///C:/Users/sa12/Documents/web_clove/Modern-web/Uses.html">
                     Other Use 
                     </a>
                   </li>
-                </ul>   
-            </nav>
-        </div>
+                    </ul>
+                </div>
+            </div>   
+           </nav>
+        </div>  
     </header>
+  </div>
+    <div class="page-container">
+        <div class="page-container inner">
+            <div class="content-container">
+                <main id="content">
+                     <header class="page_titlebar">
+                        <h1 id="firstHeader" class="first-Header">
+                            <span>Clove</span>
+                        </h1>
+                     </header>
+                      <div id="bodyContent">
+                        <div id="content-text">    
+                           <P> <em><strong>This article is about the spice.</strong> 
+                           For other uses, see Clove 
+                          <span>(disambiguation).</span>
+                          <em>"Cloves"</em> 
+                          redirects here. For other uses, 
+                          <a href="https://en.wikipedia.org/wiki/CLOVES_syndrome">see CLOVES syndrome</a>  and Cloves (singer).
+                          Not to be confused with 
+                          <a href="https://en.wikipedia.org/wiki/Clover">Clover</a>.</em>
+                           </P> 
 
-    <h1>Clove</h1>
-    
-        <main>
-
-            <div>
-
-
-    <P> <em><strong>This article is about the spice.</strong> 
-    For other uses, see Clove 
-    <span>(disambiguation).</span>
-    <em>"Cloves"</em> 
-    redirects here. For other uses, 
-    <a href="https://en.wikipedia.org/wiki/CLOVES_syndrome">see CLOVES syndrome</a>  and Cloves (singer).
-    Not to be confused with 
-    <a href="https://en.wikipedia.org/wiki/Clover">Clover</a>.</em>
-    </P> 
-
-    <p> <b>Cloves</b>
+                          <p> <b>Cloves</b>
          are the aromatic flower buds of a tree in the family Myrtaceae, 
          <strong>Syzygium aromaticum </strong>
          <span>(/sɪˈzɪdʒiːəm ˌærəˈmætɪkəm/).</span>
@@ -68,9 +80,9 @@
         <abbr title=""> 
            <i>throughout the year owing to different harvest seasons across various countries.
         </abbr></i>  
-    </p>
+                          </p>
      
-    <p>
+                          <p>
         <b>
            <h3>Etymology</h3> 
         </b>
@@ -79,12 +91,12 @@
         <abbr title="">first used in English in the 15th century,</abbr>
         derives via Middle English clow of gilofer, Anglo-French clowes de gilofre and Old French clou de girofle, from the Latin word clavus <strong>"nail"</strong> .
         The related English word gillyflower, originally meaning "clove", derives via said Old French girofle and Latin caryophyllon, from the Greek karyophyllon "clove", literally "nut leaf".
-    </p>
-
-
+                          </p>
+                        </div>
+                      </div>
+                </main>
             </div>
-
-        </main>
+        </div>
     </div>
 
 </body>
